--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     height: auto;
     position: absolute;
     left: 15%;
-    top: 5%;
+    top: 1vh;
     border-radius: 10px;
     margin-top: 0;
     transition: 400ms;
@@ -69,14 +69,32 @@
     font-size: 220%;
 }
 
+.team-slider input{
+    width: 80%;
+}
+
 .container{
-    margin-top: 27.5% !important;
+    margin-top: 17.5% !important;
     width: 60%;
 }
 
-.slider-container{
+#slider-container{
     display: flex;
-    flex-wrap: wrap;
     margin: auto;
 }
 
+.slider-wrap-normal{
+    flex-wrap: wrap;
+}
+
+.slider-wrap-reversed{
+    flex-wrap: wrap-reverse;
+}
+
+#images-temp{
+    display: none;
+}
+
+#sliders-temp{
+    display: none;
+}
