--- a/style.css
+++ b/style.css
@@ -53,12 +53,11 @@
     opacity: 1;
 }
 
-
 .team-slider{
     padding: 10px;
     width: 30%;
     border-radius: 10px;
-    border: 2px solid black;
+    border: 2px solid #AAAAAA;
     text-align: center;
     margin: auto;
     margin-bottom: 10px;
